// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkoutSessionExerciseCard matches snapshot for completed exercise 1`] = `
<div>
  <div
    aria-label="Bench Press: 3 of 3 sets"
    class="exerciseCard completed"
    role="button"
    tabindex="0"
  >
    <div
      class="exerciseHeader"
    >
      <div
        class="exerciseInfo"
      >
        <span
          class="exerciseName"
        >
          Bench Press
        </span>
        <span
          class="muscleBadge"
        >
          Chest
        </span>
      </div>
    </div>
    <div
      class="exerciseDetails"
    >
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Weight
        </span>
        <span
          class="detailValue"
        >
          60
           kg
        </span>
      </div>
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Reps
        </span>
        <span
          class="detailValue"
        >
          10
        </span>
      </div>
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Sets
        </span>
        <span
          class="detailValue"
        >
          3
           / 
          3
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="progressBarContainer"
    >
      <div
        class="progressBar progressCompleted"
        style="width: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`WorkoutSessionExerciseCard matches snapshot for in-progress exercise 1`] = `
<div>
  <div
    aria-label="Bench Press: 1 of 3 sets"
    class="exerciseCard "
    role="button"
    tabindex="0"
  >
    <div
      class="exerciseHeader"
    >
      <div
        class="exerciseInfo"
      >
        <span
          class="exerciseName"
        >
          Bench Press
        </span>
        <span
          class="muscleBadge"
        >
          Chest
        </span>
      </div>
    </div>
    <div
      class="exerciseDetails"
    >
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Weight
        </span>
        <span
          class="detailValue"
        >
          60
           kg
        </span>
      </div>
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Reps
        </span>
        <span
          class="detailValue"
        >
          10
        </span>
      </div>
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Sets
        </span>
        <span
          class="detailValue"
        >
          1
           / 
          3
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="progressBarContainer"
    >
      <div
        class="progressBar "
        style="width: 33.33333333333333%;"
      />
    </div>
    <p
      class="hint"
    >
      Double tap to mark a set
    </p>
  </div>
</div>
`;

exports[`WorkoutSessionExerciseCard matches snapshot when justCompleted 1`] = `
<div>
  <div
    aria-label="Bench Press: 1 of 3 sets"
    class="exerciseCard "
    role="button"
    tabindex="0"
  >
    <div
      class="exerciseHeader"
    >
      <div
        class="exerciseInfo"
      >
        <span
          class="exerciseName"
        >
          Bench Press
        </span>
        <span
          class="muscleBadge"
        >
          Chest
        </span>
      </div>
      <span
        class="checkmark"
      >
        ✓
      </span>
    </div>
    <div
      class="exerciseDetails"
    >
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Weight
        </span>
        <span
          class="detailValue"
        >
          60
           kg
        </span>
      </div>
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Reps
        </span>
        <span
          class="detailValue"
        >
          10
        </span>
      </div>
      <div
        class="detail"
      >
        <span
          class="detailLabel"
        >
          Sets
        </span>
        <span
          class="detailValue"
        >
          1
           / 
          3
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="progressBarContainer"
    >
      <div
        class="progressBar "
        style="width: 33.33333333333333%;"
      />
    </div>
    <p
      class="hint"
    >
      Double tap to mark a set
    </p>
  </div>
</div>
`;
